<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:animateLayoutChanges="true"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/profile"
            android:layout_centerHorizontal="true"
            android:id="@+id/fragmentSignUpProfileImage"
             />
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignEnd="@id/fragmentSignUpProfileImage"
            android:layout_alignBottom="@id/fragmentSignUpProfileImage"
            android:src="@drawable/ic_baseline_camera_alt_24"
            app:tint="@color/purple_500"
            android:id="@+id/cameraImage"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10"
            android:id="@+id/firstLinear"
            android:layout_marginTop="20dp"
            android:layout_below="@id/fragmentSignUpProfileImage"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:layout_marginStart="30dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:ellipsize="none"
                    android:id="@+id/phoneText"/>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:id="@+id/phoneDivider"
                    android:background="@color/black"
                    android:layout_marginTop="7dp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:layout_marginEnd="30dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/unselected"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:ellipsize="none"
                    android:id="@+id/emailText"/>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:id="@+id/emailDivider"
                    android:background="@color/unselected"
                    android:layout_marginTop="7dp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:id="@+id/secondLinear"
            android:layout_below="@id/firstLinear"
            android:layout_marginTop="15dp"
            android:background="@drawable/sign_up_second_edittext_bg">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tr_90"
                android:textSize="16sp"
                android:gravity="center"
                android:padding="15sp"
                android:id="@+id/tr90"
                android:textColor="@color/black"
                />
            <View
                android:layout_width="1dp"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:background="#77000000"
                android:id="@+id/dividerPhone"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Phone"
                android:textSize="16sp"
                android:background="@android:color/transparent"
                android:paddingStart="14dp"
                android:id="@+id/phoneEditText"
                android:maxLines="1"
                android:ellipsize="end"
                android:includeFontPadding="false"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:id="@+id/thirdLinear"
            android:layout_below="@id/secondLinear"
            android:layout_marginTop="15dp"
            android:background="@drawable/sign_up_second_edittext_bg">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password"
                    android:textSize="15sp"
                    android:background="@drawable/sign_up_second_edittext_bg"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:id="@+id/fourthLinear"
            android:layout_below="@id/thirdLinear"
            android:layout_marginTop="15dp"
            android:background="@drawable/sign_up_second_edittext_bg">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Name"
                android:textSize="16sp"
                android:background="@android:color/transparent"
                android:paddingStart="14dp"
                android:maxLines="1"
                android:id="@+id/nameText"
                android:ellipsize="end"
                android:includeFontPadding="false"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:id="@+id/fifthLinear"
            android:layout_below="@id/fourthLinear"
            android:layout_marginTop="15dp"
            android:background="@drawable/sign_up_second_edittext_bg">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Username"
                android:textSize="16sp"
                android:background="@android:color/transparent"
                android:paddingStart="14dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:id="@+id/userNameText"
                android:includeFontPadding="false"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_below="@id/fifthLinear"
            android:layout_alignStart="@id/thirdLinear"
            android:layout_alignEnd="@id/thirdLinear"
            android:layout_marginTop="15dp"
            android:background="@drawable/sign_in_facebook_bg"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/signUpLayout"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_upp"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#448F8F8F"
            android:id="@+id/viewDivider"
            android:layout_above="@id/bottomLinearLayout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:orientation="horizontal"
            android:id="@+id/bottomLinearLayout"
            android:gravity="center_horizontal"
            android:layout_alignParentBottom="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textColor="#616161"
                android:textSize="13sp"
                android:layout_gravity="center"
                android:includeFontPadding="false"
                android:ellipsize="none"
                android:layout_marginEnd="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:ellipsize="none"
                android:focusable="true"
                android:id="@+id/logInText"
                android:includeFontPadding="false"
                android:text="@string/log_in"
                android:textColor="@color/text_pressed_selector"
                android:textSize="13sp"
                android:textStyle="bold" />


        </LinearLayout>
        </RelativeLayout>
</layout>