<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:facebook="http://schemas.android.com/apk/res-auto" >

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">


        <ImageView
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_above="@id/userNameLayout"
            android:layout_alignStart="@id/userNameLayout"
            android:layout_alignEnd="@id/userNameLayout"
            android:layout_marginBottom="20dp"
            android:src="@drawable/instagram" />

        <LinearLayout
            android:id="@+id/userNameLayout"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_alignStart="@id/passwordLayout"
            android:layout_alignEnd="@id/passwordLayout"
            android:layout_above="@id/passwordLayout"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/phone_number_email_or_username">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userNameText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/sign_in_background"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/passwordLayout"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_alignStart="@id/logInLayout"
            android:layout_alignEnd="@id/logInLayout"
            android:layout_above="@id/logInLayout"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password"
                    android:background="@drawable/sign_in_background"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/logInLayout"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_above="@id/forgetPasswordLayout"
            android:layout_alignStart="@id/googleLinearLayout"
            android:layout_alignEnd="@id/googleLinearLayout"
            android:layout_marginBottom="10dp"
            android:background="@drawable/sign_in_facebook_bg"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Log in"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/forgetPasswordLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_above="@id/dividerLayout"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:layout_alignStart="@id/dividerLayout"
            android:layout_alignEnd="@id/dividerLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/forgot_your_login_details" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:ellipsize="end"
                android:focusable="true"
                android:maxLines="1"
                android:paddingStart="3dp"
                android:id="@+id/helpText"
                android:text="Get help logging in."
                android:textColor="@color/text_pressed_selector"
                android:textSize="13sp"
                tools:ignore="RtlSymmetry,TouchTargetSizeCheck" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dividerLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/googleLinearLayout"
            android:layout_alignEnd="@id/googleLinearLayout"
            android:layout_above="@id/googleLinearLayout"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:weightSum="9"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="#AA8F8F8F"
                android:layout_weight="4"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="OR"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:id="@+id/orText"
                android:layout_weight="1"
                android:textAlignment="center" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="#AA8F8F8F"
                android:layout_weight="4"

                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/googleLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_above="@id/facebookLinearLayout"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/sign_in_google_bg"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:src="@drawable/google" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="Continue with Google"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/facebookLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_above="@id/viewDivider"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/sign_in_facebook_bg"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal">

            <com.facebook.login.widget.LoginButton
                android:id="@+id/facebookLogInButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:visibility="gone" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_facebook" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/continue_with_facebook"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#448F8F8F"
            android:id="@+id/viewDivider"
            android:layout_above="@id/bottomLinearLayout" />

        <LinearLayout
            android:id="@+id/bottomLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="4dp"
                android:ellipsize="none"
                android:includeFontPadding="false"
                android:text="@string/don_t_have_an_account"
                android:textColor="#616161"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:ellipsize="none"
                android:id="@+id/signUpText"
                android:focusable="true"
                android:includeFontPadding="false"
                android:text="@string/sign_up"
                android:textColor="@color/text_pressed_selector"
                android:textSize="13sp"
                android:textStyle="bold" />


        </LinearLayout>

    </RelativeLayout>
</layout>